# mcp-inspector

./: .gitignore  CLAUDE.md  README.md  STATUS.md  package.json
backend/: config.py  main.py  models.py  proxy.py  pyproject.toml  wrap.py
backend/tests/: test_api.py  test_proxy.py  test_wrap.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: ConnectionStatus.tsx  CopyButton.tsx  Dashboard.tsx  DetailPanel.tsx  EventList.tsx  EventRow.tsx  FilterBar.tsx  JsonViewer.tsx  ReplayButton.tsx  ServerItem.tsx  Sidebar.tsx  StatsBar.tsx
frontend/hooks/: useKeyboardNav.ts  useWebSocket.ts
frontend/types/: events.ts
tasks/: 01-prd-mcp-inspector.md
